# Multinomial-NaiveBayes

./: .gitignore  README.md
data/adience/: README  create_path_dataset.py  dataset.txt  fold0.csv  fold1.csv  fold2.csv  fold3.csv  fold4.csv
include/: LBP.hpp  adaboost_col.hpp  gaussiannaivebayes.hpp  gaussiannaivebayes_col.hpp  lbp_dataset.hpp  mb_lbp.hpp  multiblock_local_binary_patterns.hpp  multinomialnaivebayes.hpp
scripts/: gender_classification.sh  test_adaboost.sh  test_gaussianNB.sh  test_lbp_dataset.sh  test_mb_lbp.sh  test_multinomialNB.sh
scripts/python/: Adaboost_GaussianNB.py  Adaboost_MultinomialNB.py  GaussianNB.py  MultinomialNB.py  adaboost_samme_r.py  test.py  test2.py  test_sklearn.py  untitled.py
src/: CMakeLists.txt  Makefile  README.md  adaboost_col.cpp  gaussiannaivebayes.cpp  gaussiannaivebayes_col.cpp  lbp_dataset.cpp  mb_lbp.cpp  multiblock_local_binary_patterns.cpp  multinomialnaivebayes.cpp  test_clasification.cpp  test_dataset.cpp  test_gaussian.cpp  test_multinomial.cpp
src/LBP/: CMakeLists.txt  Makefile  mb_lbp_test.py
